Findbugs and working with gradlew run