@@ -24,7 +24,7 @@ public class GreenhouseController {
     if(args.length == 1)
       gc.addEvent(
         new GreenhouseControls.Terminate(
-          new Integer(args[0])));
+          Integer.valueOf(args[0])));
     gc.run();
   }
 }
